# en

./: .justfile  .rustfmt.toml  Cargo.toml  README.md
.forgejo/workflows/: check.yaml
docs/: notes.md
src/: dev.rs  formats.rs  handlers.rs  lib.rs  main.rs  router.rs  syntax.rs  types.rs
src/handlers/: error.rs  fixed.rs  graph.rs  navigation.rs  raw.rs  template.rs
src/router/handlers/: error.rs  fixed.rs  graph.rs  navigation.rs  raw.rs  template.rs
src/syntax/: arguments.rs  command.rs  content.rs  serial.rs
src/syntax/content/: elements.rs  lexeme.rs  parser.rs  parsers.rs  token.rs  units.rs
src/syntax/content/elements/: header.rs  paragraph.rs  span.rs
src/syntax/content/parser/: cluster.rs  lexeme.rs  segment.rs  token.rs
src/syntax/content/parser/lexeme/: compound.rs
src/syntax/content/parser/token/: anchor.rs  code.rs  header.rs  linebreak.rs  literal.rs  paragraph.rs  preformat.rs  span.rs
src/syntax/content/parsers/: line.rs  word.rs
src/syntax/content/parsers/line/: elements.rs  parser.rs
src/syntax/content/parsers/line/elements/: header.rs  paragraph.rs  span.rs
src/syntax/content/parsers/word/: elements.rs  parser.rs
src/syntax/content/parsers/word/elements/: anchor.rs  literal.rs
static/: graph.toml  style.css
templates/: about.html  acknowledgments.html  base.html  empty.html  error.html  index.html  node.html  tree.html
tests/: smoke.rs
tests/mocks/bad_graph/static/: graph.toml
tests/mocks/good_json/: graph.json
