[package]
name = "en"
version = "0.1.0"
description = "A non-linear writing instrument."
license = "AGPL-3.0-only"

repository = "https://codeberg.org/jutty/en"

edition = "2024"
rust-version= "1.91.1"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tera = { version = "1.20.1", features = ["builtins"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
